# virtualift-be

./: .gitignore  Dockerfile  README.md  pyproject.toml
migrations/models/: 0_20250927083154_init.py  1_20250928060856_update.py
src/apps/: __init__.py
src/apps/auth/: __init__.py  models.py  schemas.py
src/apps/auth/routes/: user_routes.py
src/apps/auth/services/: user_services.py
src/apps/file/: __init__.py  models.py  routes.py  service.py
src/apps/payments/: models.py
src/apps/subscription/: models.py
src/apps/subscription/models/: sub_plan_models.py
src/apps/tryonml/: models.py  routes.py  schemas.py
src/apps/tryonml/services/: loader.py  network.py  pipeline.py
src/configs/: env.py
src/core/: database.py  models.py  routes.py
src/enums/: base.py
src/error/: base.py
src/libs/: cloudinary.py  gauth.py
src/scripts/: aerich.py  server.py
src/utilities/: base_model.py  base_service.py  crypto.py  id_generators.py  jwt.py  reader.py  route_builder.py
